  was called
* put the user callback inside a push/pop state
* added (with-state) (with-primitive) (pdata-map!) (pdata-fold)
* added (pdata-index-map!) (pdata-index-fold)
* collada scene import
* drflux now fully operational - but a little crash prone with some commands
* text improvements courtesy of Gabor Papp
* obj-export for saving out model data
* obj-import fixes
0.13

* stereo rendering support by Alex Norman, adding:
	- (set-stereo-mode ['no-stereo 'crystal-eyes 'colour])
	- (get-stereo-mode)
	- (get-eye-separation) 
	- (set-eye-separation)
* (draw-buffer) added by Alex Norman
* libfluxus clean up, removed old cruft, simplified renderer
* removed (begin-scene) and (end-scene), added (render)
* removed feedback for aesthetic reasons
* added (clear-zbuffer)
* added (pixels-load) for loading pngs into pixel prims
* renamed (upload-pixels) to (pixels-upload)
* added indexed mode polygon support
	- (poly-set-index index-list) 
	- (poly-convert-to-indexed)
* stencil buffer shadows for poly primitives
	- (shadow-light)
	- (shadow-length)
	- (shadow-debug)
* livecode recorder startup flags
	- -r filename : record to file
	- -p filename : playback from file
	- -d time : seconds per frame time override (for use with frame-dump)
* added (build-copy) for making copies of any primitive
* pfuncs added (replacement for pdata-op)
	- (make-pfunc)
	- (pfunc-run)
	- (pfunc-set!)
	- arithmetic pfunc
* skinning
	- genskinweights pfunc
	- skinweights->vertcolours pfunc
	- skinning pfunc
* changed from strings to symbols
	make-light
	light-attenuation
	blend-mode
* changed from int's to symbols
	build_polygons
* changed pdata-set to pdata-set!
* changed pdata-get to pdata-ref
* (hint-lazy-parent) for building scenegraph subtrees which don't
  inherit transforms - this makes building skeletons which are controlled
  by the physics possible
* (blobby->poly) extracts the blobbies mesh into a polygon primitive
* (hint-box) fix